examples/test/testpolicy5396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5396
  namespace: namespace109
spec:
  podSelector:
    matchLabels:
      key27: value9
      key45: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value0
          key18: value15
      podSelector:
        matchLabels:
          key25: value28
          key47: value38
          key16: value48
